--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,19 +36,18 @@ stages:
       displayName: 'Run node-sass using PowerShell'
       
 
-    # - script: ./node_modules/.bin/node-sass $env:wwwrootDir --output $env:wwwrootDir
-    #   displayName: 'Compile Sass assets'
-    #   shell: powershell
-    # - script: ./node_modules/.bin/node-sass $wwwrootDir --output $wwwrootDir
-    #   #'./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
-    #   displayName: 'Compile Sass assets'
-
-    - task: gulp@1
+    #- task: gulp@1
+    - powershell: ./node_modules/.bin/gulp
       displayName: 'Run gulp tasks'
-
-    - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
-      displayName: 'Write build info'
+    
+    - powershell: '"$env:Build_DefinitionName, $env:Build_BuildId, $env:Build_BuildNumber" > buildinfo.txt'
+      displayName: 'Write build info using PowerShell'
       workingDirectory: $(wwwrootDir)
+
+    # - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+    #   displayName: 'Write build info'
+    #   workingDirectory: $(wwwrootDir)
+    ##"$env:Build_DefinitionName, $env:Build_BuildId, $env:Build_BuildNumber" | Out-File -FilePath buildinfo.txt
 
     - task: DotNetCoreCLI@2
       displayName: 'Restore project dependencies'
