--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -121,4 +121,4 @@ stages:
               azureSubscription: 'Azure subscription 1(0a5c3d19-6bfe-44bc-adeb-e011d61044ee)'
               appType: 'webAppLinux'
               appName: '$(WebAppNameStaging)'
-              package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              package: '$(Pipeline.Workspace)/drop-test/$(buildConfiguration)/*.zip'
